Added authentication code
